RbA Build/src/objects/MABatchSchedule__c.object
<CustomObject>
    <description>This is to store successful batches when they are returned.</description>
    <fields>
        <fullName>BatchDate__c</fullName>
        <label>BatchDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BatchEdits__c</fullName>
        <description>Save batch edits JSON to this field</description>
        <label>BatchEdits</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchResults__c</fullName>
        <description>JSON holding the batch results</description>
        <label>BatchResults</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <externalId>true</externalId>
        <label>JobId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MABatchSchedule</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>MABatchSchedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MABatchSchedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>